style.css
body, html {
  height: 100%;
  margin: 0;
  /* max-width: 800px; */
}

.flex-container {
  display: flex;
  text-align: center;
  flex-direction: column;
}

#time-stat {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 40%;
  text-align: left;
  position: absolute;
  z-index: 5;
  padding: 20px;
  color: black;
  -webkit-text-stroke: 0.5px grey;

}

.dropbtn {
  font-size: 20px;
  cursor: pointer;
  position: absolute;
  left: 20px;
  top: 180px;
  width: 140px;
  height: 40px;
  border-radius: 4px;
  border: 3px dotted rgba(147, 255, 138, 1);
  color: rgba(147, 255, 138, 1);
  font-family: "Helvetica";
  background-color: rgba(147, 255, 138, 0.25);
  filter: drop-shadow(0px 0px 4px rgba(230, 230, 230, 1));
}

.dropdown {
  position: absolute;
  left: 20px;
  top: 20px;
}

.dropdown-content {
  display: none;
  position: absolute;
  min-width: 500px;
  z-index: 1;
  position: absolute;
  left: 20px;
  top: 240px;
  border-radius: 4px;
  border: 3px dotted rgba(147, 255, 138, 1);
  color: rgba(147, 255, 138, 1);
  font-family: "Helvetica";
  background-color: rgba(147, 255, 138, 0.25);
  filter: drop-shadow(0px 0px 4px rgba(230, 230, 230, 1));
}

.dropdown-content a {
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  color: rgba(147, 255, 138, 1);
}

.dropdown-content a:hover {background-color: #73AD21;}
.dropdown:hover .dropdown-content {display: block;}
.dropdown:hover .dropbtn {background-color: #3e8e41;}

#game-background {
  position: relative;
  
  background-image: url("assets/garden%20bg.png");

  /* Full height */
  height: 100%; 
  
  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#pots {
  position: absolute;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 30px;
  gap: 30px;
  width: 90%;
}

#clock-canvas {
  width: 100px;
  height: 100px;
}

.pot-img {
  width: 100px;
  height: 100px;
  flex: display; 
  flex-direction: center;
}
#clock-img {
  width: 100px;
  height: 100px;
  flex: display; 
  flex-direction: center;
}

#title {
  z-index: 50;
  background-color: rgba(0, 0, 0, 0.5);
  color: rgba(255, 255, 255, 1);
  position: absolute;
  margin: 50px;
  padding: 50px;
  height: 100%;
  width: 100%;
  margin-top: -50px;
  margin-left: -50px;
  text-align: center;
}

h1, h2 {
  padding: 0px;
  font-family: "Helvetica";
  font-weight: 300px;
  color: rgba(230, 230, 230, 1);
  filter: drop-shadow(0px 0px 4px rgba(230, 230, 230, 1));
}

#play-button {
  font-family: "Helvetica";
  width: 100px;
  height: 40px;
  font-size: 30px;
  background-color: rgba(255, 255, 255, 0);
  color: rgba(230, 230, 230, 1);
  filter: drop-shadow(0px 0px 4px rgba(230, 230, 230, 1));
}

.flex-column {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.flex-column-full-height {
  height: 100%;
}

.flex-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

#hotbar {
  display: flex;
  gap: 10px;
  padding: 10px;
  background: #c2a75d;
  position: sticky;
  bottom: 0px;
}

.plant {
  width: 80px;
  height: 80px;
  cursor: grab;
  background-color: rgba(173,161,146);
  border: solid;
  border-width: 2px;
  border-color: rgba(78,75,68);
}

#tools {
  width: 95%;
  display: flex;
  flex-direction: row;
  justify-content: end;
  position: absolute;
  margin: 20px;
  gap: 20px;
  z-index: 3;
}

.tool {
  width: 80px;
  height: 80px;
  cursor: grab;
  background-color: rgba(0,161,146);
  border: solid;
  border-width: 2px;
  border-color: rgba(78,75,68); 
  z-index: 50;
}

.planted {
  height: 80px;
  width: 80px;
  position: absolute;
  z-index: 3;
  top: 0%;
  left: 30%; /* for some reason, 50% isnt 'center' */
}

.unwatered {
  filter: brightness(50%);
}

.watered {
  
}

/* this is when you're dragging a tool or plant */
.dragging {
  background-color: rgba(0, 0, 0, 0);
  border-width: 0px;
}

.highlight {
  filter: brightness(150%);
  outline: 5px dotted rgba(230, 20, 20, 0.5);
}

.highlight-hover { /* !important gives priority */
  filter: brightness(150%);
  outline: 10px double rgba(230, 230, 230, 1);
}

.pot-wrap {
  position: relative;
  margin: 60px;
}

.pot, .plant-drop {
  position: absolute;
  width: 100px;
  height: 100px;
}

.plant-drop {
  z-index: 1;
}

.pot {
  z-index: 0;
}

#time-stat {
  font-family: "Helvetica";
  color: rgba(30, 30, 30, 1);
  font-weight: 600px;
  font-size: 45px;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: rgba(230, 230, 230, 0.5);
}

.clock {
  position: absolute;
  z-index: 1;
  margin: 20px;
}

#clock-base {
  height: 140px;
  width: 140px;
  position: absolute;
  z-index: 1
}

#clock-hand {
  height: 100px;
  width: 100px;
  z-index: 10;
  position: absolute;
}

.clock {
  background: url("CLOCK_BASE.png");
  background-size: 140px 140px;
  background-position: 0 0;
  width: 100px;
  height: 100px;
  z-index: 1;
  /*             border: 20px solid black; */
  position: absolute;
  padding: 20px;
  
  /*             background: white; */
}

.hand {
  width: 45%;
  background: black;
  position: absolute;
  top: 50%;
  left: -1%;
  transform-origin: 100%;
  transform: rotate(90deg);
  transition: all 0.05s;
  z-index: 2;
  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
}

.second-hand {
  left: 35%;
  top: 60%;
  width: 30%;
  height: 2px;
  background: black;
}


/* https://www.w3schools.com/howto/howto_js_rangeslider.asp */

.slide-container {
  display: flex;
  gap: 10px;
  background: #c2a75d;
  position: sticky;
  bottom: 100px;
  width: 300px;
  height: 20px;
}

#volume-slider {
  height: 70%;
  width: 100%;
  top: 50%;
  position: sticky;
}

#slide-text {
  height: 100%;
  width: 70%;
  font-family: "Helvetica";
}

/* The slider itself */
.slider {
  -webkit-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  outline: none;
}

